--- a/src/components/CustomerLists/CustomerLists.scss
+++ b/src/components/CustomerLists/CustomerLists.scss
@@ -3,12 +3,12 @@
 .search-results-group {
     width: 100%;
     margin-bottom: 12px;
-    background-color: $sidebar-Bgcolor;
+    // background-color: $sidebar-Bgcolor;
     border-bottom: 1px solid rgba(0, 0, 0, 0.08);
 
     .group-header {
-        padding: 12px 20px 8px;
-        font-size: 13px;
+        padding: 25px 5px;
+        font-size: 14px;
         font-weight: 600;
         color: $text2ndColor;
         text-transform: uppercase;
@@ -17,6 +17,8 @@
     }
 
     .member-item.search-result {
+        display: flex;
+        align-items: center;
         padding: 10px 20px;
         cursor: pointer;
         transition: background-color $transition-duration ease;
@@ -29,9 +31,9 @@
             margin-right: 12px;
 
             .MuiAvatar-root {
-                width: 40px;
-                height: 40px;
-                font-size: 16px;
+                width: 38px;
+                height: 38px;
+                font-size: 14px;
                 border-radius: 50%;
                 box-shadow: inset 0 0 0 1px rgba(17, 24, 39, 0.06);
             }
@@ -45,9 +47,10 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                font-weight: 500;
+                font-weight: 600;
                 color: $titleColor;
                 margin-bottom: 2px;
+                font-size: 14px;
 
                 .member-phone {
                     margin-left: 8px;
