--- a/src/components/CustomerLists/CustomerLists.scss
+++ b/src/components/CustomerLists/CustomerLists.scss
@@ -266,9 +266,10 @@
 
                             .member-name-unread {
                                 font-family: $font-family;
-                                font-weight: 700;
-                                font-size: 14px;
+                                font-weight: 600;
+                                font-size: 15px;
                                 color: $titleColor;
+                                text-transform: capitalize;
                                 margin: 0;
                                 line-height: 1.2;
                             }
@@ -317,15 +318,16 @@
                             .last-message-unread {
                                 font-family: $font-family;
                                 font-size: 13px;
-                                color: $titleColor;
-                                font-weight: 600;
+                                color: $text2ndColor;
+                                font-weight: 500;
                                 margin: 0;
                                 line-height: 1.3;
                                 overflow: hidden;
                                 text-overflow: ellipsis;
                                 white-space: nowrap;
                                 flex: 1;
-                                margin-right: 8px;
+                                min-width: 0;
+                                margin-right: 0;
                                 transition: color 0.2s ease-in-out;
                             }
 
